--- a/package.json
+++ b/package.json
@@ -36,10 +36,16 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "mobx": "^2.2.2",
-    "mobx-react": "^3.3.1",
+    "css-loader": "^0.23.1",
+    "horizon": "^1.1.3",
+    "lodash": "^4.13.1",
+    "mobx": "^2.3.2",
+    "mobx-react": "^3.4.0",
     "mobx-react-devtools": "^4.2.0",
+    "onsenui": "^2.0.0-rc.14",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-onsenui": "^0.5.6",
+    "style-loader": "^0.13.1"
   }
 }
