--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "horizon": "^1.1.3",
     "lodash": "^4.13.1",
     "mobx": "^2.3.2",
@@ -45,7 +46,7 @@
     "onsenui": "^2.0.0-rc.14",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-onsenui": "^0.5.6",
+    "react-onsenui": "^0.6.0",
     "style-loader": "^0.13.1"
   }
 }
