--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0",
-    "ejs": "2.4.1",
-    "express": "4.13.3"
   },
   "dependencies": {
     "file-loader": "^0.9.0",
@@ -52,6 +50,8 @@
     "react-hot-loader": "^2.0.0-alpha-4",
     "react-onsenui": "^0.6.1",
     "react-tap-event-plugin": "^0.2.1",
-    "superagent": "^1.8.3"
+    "superagent": "^1.8.3",
+    "express": "4.13.3",
+    "ejs": "2.4.1"
   }
 }
