--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-hot-loader": "^1.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "file-loader": "^0.9.0",
