--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "ejs": "2.4.1",
+    "express": "4.13.3",
     "file-loader": "^0.9.0",
     "format-number-with-string": "0.0.2",
-    "horizon": "^1.1.3",
+    "horizon": "^2.0.0",
     "material-ui": "0.15.0-alpha.1",
     "mobx": "^2.2.0",
     "mobx-react": "^3.3.0",
@@ -50,8 +52,6 @@
     "react-hot-loader": "^2.0.0-alpha-4",
     "react-onsenui": "^0.6.1",
     "react-tap-event-plugin": "^0.2.1",
-    "superagent": "^1.8.3",
-    "express": "4.13.3",
-    "ejs": "2.4.1"
+    "superagent": "^1.8.3"
   }
 }
